[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemosyne"
requires-python = ">=3.9"
description = "Memory-integrated agent with long-term planning and reasoning"
version = "1.0.0"
authors = [
    {name="Caleb Chin", email="cchin@cs.toronto.edu"},
    {name="Avi Ruthen", email="apr67@cornell.edu"},
    {name="Francis Bahk", email="feb47@cornell.edu"}
]
readme = "README.md"
license = "MIT"
keywords = ["deep learning", "memory", "reinforcement learning", "reasoning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gymnasium",
    "crafter",
    "numpy",
    "tqdm",
    "matplotlib",
    "torch"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/calebchin/mnemosyne"
Documentation = "https://github.com/calebchin/mnemosyne"
Repository = "https://github.com/calebchin/mnemosyne"
Issues = "https://github.com/calebchin/mnemosyne/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]

exclude = [
    ".git",
    "__pycache__",
    "docs/*",
]

lint.ignore = [
    "ANN101",
    "ANN401",
    "N801",
    "E203",
    "E266",
    "E501",
    "E741",
    "N803",
    "N802",
    "N806",
    "D400",
    "D401",
    "D104", #temporary
    "D105",
    "D415",
    "D402",
    "D205",
    "D100",
    "D101",
    "D107",
    "D203",
    "D213",
    "ANN204",
    "ANN102",
]
lint.select = ["D", "E", "F", "N", "ANN"]
lint.fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
lint.unfixable = []

[tool.pyright]
venvPath = "."
venv = ".venv"
